test/types/tuple/diten/underscore_is_special.good
underscore_is_special.chpl:1: syntax error: near '_'
